test/libsolidity/syntaxTests/structs/transient_data_location_member.sol
struct S {
    int transient x;
}
// ----
// ParserError 2314: (26-27): Expected ';' but got identifier
